tests/errors/test_59.xpp
// No constructor exists for provided parameters

class IntBox {
	pub IntBox() {}
}

fn main() void {
	let b = IntBox(21);
}
